# squeekboard

./: .gitignore  .gitlab-ci.yml  Cargo.deps  Cargo.deps.legacy  Cargo.deps.newer  Cargo.deps.online  Cargo.toml.in  README.md  cargo_build.py  meson.build  meson_options.txt
data/: common.css  meson.build  popover.ui  popup.ui  sm.puri.Squeekboard.desktop.in.in  squeekboard.gresources.xml  style-Adwaita:dark.css  style.css
data/keyboards/: ara.yaml  ara_wide.yaml  bg+phonetic.yaml  bg.yaml  ch+de.yaml  ch+fr.yaml  ch.yaml  ch_wide.yaml  cz+qwerty.yaml  cz+qwerty_wide.yaml  cz.yaml  cz_wide.yaml  de.yaml  de_wide.yaml  epo.yaml  es+cat.yaml  fr_wide.yaml  gr+polytonic.yaml  gr_wide.yaml  il.yaml  ir.yaml  ir_wide.yaml  it+fur.yaml  it.yaml  jp+kana.yaml  jp+kana_wide.yaml  no.yaml  pl.yaml  ro.yaml  ro_wide.yaml  terminal_wide.yaml  th.yaml  th_wide.yaml  ua.yaml  us+colemak.yaml  us+colemak_wide.yaml  us+dvorak.yaml  us+dvorak_wide.yaml
data/keyboards/email/: us.yaml
data/keyboards/pin/: us.yaml
data/keyboards/terminal/: fr.yaml  fr_wide.yaml  generic.yaml  generic_wide.yaml
data/keyboards/url/: us.yaml
data/langs/: bg-BG.txt  cs-CZ.txt  fa-IR.txt  fur-IT.txt  he-IL.txt  hy-AM.txt  ru-RU.txt
debian/: changelog  check_release.py  control  control-newer  copyright  gbp.conf  not-installed  rules  sm.puri.OSK0.desktop  squeekboard-devel.install  squeekboard.install  squeekboard.lintian-overrides  watch
debian/cargo/: config
debian/patches/: 0001-Cargo.toml-update-to-Debian-dependencies-versions.patch  0001-Make-compatible-with-latest-cargo-deps.patch  0002-popover.rs-fix-build-with-gtk-rs-0.7.0.patch  0003-data-keyboards-fix-typos.patch  data-keyboards-fix-typos.patch  fix_cargo_error.patch  fix_meson_ftbfs.patch  series
doc/: hacking.md  index.md  tutorial.md  views.md
eek/: eek-element.h  eek-gtk-keyboard.c  eek-gtk-keyboard.h  eek-keyboard.c  eek-keyboard.h  eek-renderer.c  eek-renderer.h  eek-types.h  layersurface.c
eekboard/: eekboard-context-service.c  eekboard-context-service.h
examples/: test_layout.rs
po/: LINGUAS  POTFILES.in  ca.po  de.po  es.po  fa.po  fi.po  fur.po  gl.po  he.po  hu.po  it.po  ka.po  ko.po  meson.build  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: action.rs  animation.h  animation.rs  assert_matches.rs  data.rs  dbus.c  dbus.h  debug.rs  drawing.rs  imservice.c  imservice.rs  keyboard.rs  layout.h  layout.rs  lib.rs  locale.rs  locale_config.rs  main.h  main.rs  manager.rs  meson.build  outputs.h  outputs.rs  panel.c  panel.h  panel.rs  popover.c  popover.rs  resources.rs  server-context-service.c  server-context-service.h  server-main.c  state.rs  style.h  style.rs  submission.h  submission.rs  tests.rs  ui_manager.h  ui_manager.rs  (+4 more)
src/data/: loading.rs  mod.rs  parsing.rs
src/event_loop/: driver.rs  mod.rs
tests/: layout_erase.yaml  meson.build
tools/: entry.py  entry4.py  style-check  style-check_build  style-check_source  yamlfmt
