option('depdatadir',
       type : 'string',
       value : '',
       description : 'System data path. Will be searched for definitions instead of datadir when provided')

option('tests',
       type: 'boolean', value: true,
       description: 'Whether to compile unit tests')

option('newer',
       type: 'boolean', value: false,
       description: 'Build with dependencies newer than those of Byzantium')

option('online',
       type: 'boolean', value: true,
       description: 'Pull packages from the internet while building, as opposed to a local regstry.')
       
option('strict',
       type: 'boolean', value: true,
       description: 'Turn more warnings into errors')
